fix menu button spacing

--- a/static/global.css
+++ b/static/global.css
@@ -106,3 +106,8 @@ p a {
     text-decoration-thickness: 1px;
     text-underline-offset: 0.1em;
 }
+
+span.space {
+    display: inline-block;
+    width: 1em;
+}
